--- a/config/local.yaml
+++ b/config/local.yaml
@@ -1,6 +1,8 @@
-env: "local"
-storagePath: "./storage/storage.db"
-grpc:
-  port: 8082
+env: "LOCAL" #LOCAL, DEV, PROD
+storagePath: "../../storage/storage.db"
+httpServer:
+  address: "localhost:8082"
   timeout: 5s
   idleTimeout: 60s
+
+
